Update Netflix team 1.ipynb

--- a/Netflix team 1.ipynb
+++ b/Netflix team 1.ipynb
@@ -517,7 +517,7 @@
    "source": [
     "### Director insights\n",
     "We will explore the works of different directors, finding out which USA directors have the most content on Netflix.\n",
-    "The results show that directors Marcus Raboy, Jay Karas and  Jay Chapma have directed the most shows.\n"
+    "The results show that directors Marcus Raboy, Jay Karas and  Jay Chapman have directed the most shows.\n"
    ]
   },
   {
