Update Netflix team 1.ipynb

--- a/Netflix team 1.ipynb
+++ b/Netflix team 1.ipynb
@@ -352,12 +352,12 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.figure(figsize=(16, 8))  # Adjust the figure size as needed\n",
+    "plt.figure(figsize=(16, 8))\n",
     "top_countries.plot(kind='bar', color='skyblue')\n",
     "plt.title('Number of Shows on Netflix by Country')\n",
     "plt.xlabel('Country')\n",
     "plt.ylabel('Number of Shows')\n",
-    "plt.xticks(rotation=90)  # Rotate x-axis labels for better readability\n",
+    "plt.xticks(rotation=90)\n",
     "plt.tight_layout()\n",
     "\n",
     "# Display the graph\n",
